# forecast-club

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  scoring.py
app/routers/: __init__.py  auth.py  forecasts.py  groups.py  pages.py  predictions.py  stats.py
migrations/: env.py
migrations/versions/: 3f26572e119b_initial_models.py
static/: style.css
templates/: base.html  check_email.html  create_group.html  create_prediction.html  feed.html  group_detail.html  groups.html  join_group.html  leaderboard.html  login.html  prediction.html  profile.html
templates/partials/: forecasts_list.html  invite_result.html  leaderboard_content.html  members_list.html  prediction_list.html
tests/: conftest.py  test_auth.py  test_forecasts.py  test_groups.py  test_predictions.py  test_scoring.py  test_stats.py
